# theres_a_dream

./: .gitignore  flake.nix  readme.md
backend/: Cargo.toml  build.rs
backend/jwt/: Cargo.toml
backend/jwt/src/: lib.rs
backend/make_endpoint/: Cargo.toml
backend/make_endpoint/src/: lib.rs
backend/src/: main.rs
backend/src/api/: sum.rs
backend/templates/: callApi.ts  function.ts  main.rs
backend/tests/: add_functions_to_types.rs
frontend/: package-lock.json
frontend/src/bindings/: callApi.ts  sum.ts
frontend/src/components/: Login.vue  SecureCall.vue  Sum.vue
frontend/src/views/: HomeView.vue
