workspace = { members = [ "jwt","make_endpoint"] }
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = {version="1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
make_endpoint = { path = "./make_endpoint" }
jwt = { path = "./jwt" }
ts-rs = "7.1"
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
