[package]
name = "make_endpoint"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = {version="1.0.196", features = ["derive"] }
serde_json = "1.0.113"
warp = "0.3.6"
jwt = { path = "../jwt" }